--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.6.0",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "lru-cache": "^11.1.0"
   }
 }
