--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
-    "rewrites": [
-      {
-        "source": "/api/:match*",
-        "destination": "https://rd-api.onrender.com/api/:match*"
-      }
-    ]
-  }
-  
+  "cleanUrls": true,
+  "rewrites": [
+    {
+      "source": "/api/:match*",
+      "destination": "https://rd-api.onrender.com/api/:match*"
+    },
+    {
+      "source": "/logs",
+      "destination": "/logs.html"
+    }
+  ]
+}
