--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.6.0",
     "dotenv": "^16.5.0",
     "lru-cache": "^11.1.0"
